debug: z-index resolve

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -27,6 +27,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba($color-black, .8);
+    z-index: 20;
   }
 
   &__popup {
