--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -570,7 +570,8 @@ input {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8); }
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 20; }
 
 .home__popup {
   height: 300px;
